// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsUACutoffWarning should render the UA cutoff warning notice when Analytics is connected while GA4 is not, and the date is after the UA cutoff date (2023-07-02) 1`] = `
<div>
  <div
    class="googlesitekit-settings-notice googlesitekit-settings-notice--warning googlesitekit-settings-notice--single-row"
  >
    <div
      class="googlesitekit-settings-notice__icon"
    >
      <svg />
    </div>
    <div
      class="googlesitekit-settings-notice__body"
    >
      <div
        class="googlesitekit-settings-notice__text"
      >
        Your current Universal Analytics property stopped collecting data on July 1, 2023
      </div>
      <div
        class="googlesitekit-settings-notice__learn-more"
      >
        <a
          aria-label="Learn more (opens in a new tab)"
          class="googlesitekit-cta-link"
          href="https://sitekit.withgoogle.com/support/?doc=ga4"
          rel="noopener noreferrer"
          target="_blank"
        >
          Learn more
          <span
            class="googlesitekit-icon-wrapper"
            style="margin-left: 5px; top: 3.5px;"
          >
            <svg />
          </span>
        </a>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`SettingsUACutoffWarning should render the UA cutoff warning notice when Analytics is connected while GA4 is not, and the date is before the UA cutoff date (2023-06-30) 1`] = `
<div>
  <div
    class="googlesitekit-settings-notice googlesitekit-settings-notice--warning googlesitekit-settings-notice--single-row"
  >
    <div
      class="googlesitekit-settings-notice__icon"
    >
      <svg />
    </div>
    <div
      class="googlesitekit-settings-notice__body"
    >
      <div
        class="googlesitekit-settings-notice__text"
      >
        Your current Universal Analytics property will stop collecting data on July 1, 2023
      </div>
      <div
        class="googlesitekit-settings-notice__learn-more"
      >
        <a
          aria-label="Learn more (opens in a new tab)"
          class="googlesitekit-cta-link"
          href="https://sitekit.withgoogle.com/support/?doc=ga4"
          rel="noopener noreferrer"
          target="_blank"
        >
          Learn more
          <span
            class="googlesitekit-icon-wrapper"
            style="margin-left: 5px; top: 3.5px;"
          >
            <svg />
          </span>
        </a>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`SettingsUACutoffWarning should render the UA cutoff warning notice when Analytics is connected while GA4 is not, and the date is on the UA cutoff date (2023-07-01) 1`] = `
<div>
  <div
    class="googlesitekit-settings-notice googlesitekit-settings-notice--warning googlesitekit-settings-notice--single-row"
  >
    <div
      class="googlesitekit-settings-notice__icon"
    >
      <svg />
    </div>
    <div
      class="googlesitekit-settings-notice__body"
    >
      <div
        class="googlesitekit-settings-notice__text"
      >
        Your current Universal Analytics property stopped collecting data on July 1, 2023
      </div>
      <div
        class="googlesitekit-settings-notice__learn-more"
      >
        <a
          aria-label="Learn more (opens in a new tab)"
          class="googlesitekit-cta-link"
          href="https://sitekit.withgoogle.com/support/?doc=ga4"
          rel="noopener noreferrer"
          target="_blank"
        >
          Learn more
          <span
            class="googlesitekit-icon-wrapper"
            style="margin-left: 5px; top: 3.5px;"
          >
            <svg />
          </span>
        </a>
      </div>
    </div>
    
  </div>
</div>
`;
